--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <title> Etch A Sketch
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <link rel='stylesheet' type='text/css' href='style.css'/>
+    <script type='text/javascript' src='script.js'></script>
+  </head>
 
-<head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-</head>
+  <body>
+    <div id = "funcButtons">
+      <button type = "button" id = "sizeButton"> Size </button>
+    </div>
+    <div> <button type = "button"> Container </button> </div> <!--hange to a better looking css button?-->
+    <div id = "container"> </div>
 
-<body>
-  <div> <button type = "button"> Container </button> <div>
-</body>
+  </body>
 
 </html>
