--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Etch A Sketch
+    <title>  A Sketch </title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!--<link rel='stylesheet' type='text/css' href='style.css'/>
     <script type='text/javascript' src='script.js'></script>-->
