--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title>  A Sketch </title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <!--<link rel='stylesheet' type='text/css' href='style.css'/>
-    <script type='text/javascript' src='script.js'></script>-->
+    <title> Etch-a-Sketch </title>
+    <link rel = "stylesheet" type = "text/css" href = "style.css">
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type = "text/javascript" src = "script.js"></script>
   </head>
 
   <body>
-    <div id = "funcButtons">
-      <button type = "button" id = "sizeButton"> Size </button>
+
+
+
+    <button id = "reset"> Reset! </button>
+    <div class = "redContainer">
+      <div id="wrapper">
+        <!-- Cells are added here!!!!!!!! -->
+      </div>
     </div>
 
-    <div> <button type = "button"> Container </button> </div> <!--change to a better looking css button?-->
-    <div id = "container"> </div>
-
   </body>
+
+
 
 </html>
